--- a/templates/core/marca/listar.html
+++ b/templates/core/marca/listar.html
@@ -2,28 +2,34 @@
 {% load static bootstrap %}
 {% block conteudo %} 
 
-<div class="container mt-5">
-    <h2>Marcas</h2>
-    <table class="table table-hover text-center mt-3">
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>Nome</th>
-                <th>Descrição</th>
-                <th>URL</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for marca in marcas %}
-            <tr>
-                <td>{{ marca.id }}</td>
-                <td>{{ marca.nome|default:"-" }}</td>
-                <td>{{ marca.descricao|safe|default:"-" }}</td>
-                <td>{{ marca.url|default:"-" }}</td>                
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-</div>
+    <div class="container mt-5">
+        <h2>Marcas</h2>
+        {% if marcas %}
+            <table class="table table-hover text-center mt-3">
+                <thead>
+                    <tr>
+                        <th>ID</th>
+                        <th>Nome</th>
+                        <th>Descrição</th>
+                        <th>URL</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for marca in marcas %}
+                    <tr>
+                        <td>{{ marca.id }}</td>
+                        <td>{{ marca.nome|default:"-" }}</td>
+                        <td>{{ marca.descricao|safe|default:"-" }}</td>
+                        <td>{{ marca.url|default:"-" }}</td>                
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+            <div class="alert alert-info" role="alert">
+                Sem marca cadastrada.
+            </div>
+        {% endif %}
+    </div>
 
 {% endblock conteudo %}
